--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,8 @@ Description: Nonlinear regression of biological data involves choosing a model t
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.0.2
+Imports: 
+    ggplot2,
+    stats,
+    dplyr
