--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,12 @@ Package: nlfitr
 Type: Package
 Title: Fitting models to nonlinear data
 Version: 0.1.0
-Authors@R:
-    person("TJ", "Murphy", email = "medtjm@emory.edu", role = c("aut", "cre"))
+Author: TJ Murphy <medtjm@emory.edu>
 Maintainer: TJ Murphy <medtjm@emory.edu>
-Description: Nonlinear regression of biological data involves choosing a model to fit the data while providing initial estimtes of the model's parameters. Regression optimizes the model fit by iteratively improving these parameter estimates. This package simplifies nlme-based nonlinear regression in R by providing several functions with pre-specified model formulas and intuitive parameter values. These functions focus on common hyperbolic stimulus-response (dose-response, binding) and exponential (growth, decay) phenomena of biological systems. Each model has a companion function for simulating responses.
+Description: Nonlinear regression of biological data involves choosing a model to fit the data. Initial estimates of the model's parameters must be provided. Regression then optimizes the model fit by iteratively improving these parameter estimates. 
+    This package simplifies nlme-based nonlinear regression in R by providing several functions with pre-specified model formulas and intuitive parameter values. 
+    These functions focus on common hyperbolic stimulus-response (dose-response, binding) and exponential (growth, decay) phenomena observed in biological systems. 
+    Each model has a companion function for simulating responses.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
