--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,11 @@ Title: Fitting models to nonlinear data
 Version: 0.1.0
 Author: TJ Murphy <medtjm@emory.edu>
 Maintainer: TJ Murphy <medtjm@emory.edu>
-Description: Nonlinear regression of biological data involves choosing a model to fit the data. Initial estimates of the model's parameters must be provided. Regression then optimizes the model fit by iteratively improving these parameter estimates. 
-    This package simplifies nlme-based nonlinear regression in R by providing several functions with pre-specified model formulas and intuitive parameter values. 
-    These functions focus on common hyperbolic stimulus-response (dose-response, binding) and exponential (growth, decay) phenomena observed in biological systems. 
-    Each model has a companion function for simulating responses.
+Description: 
+    Nonlinear regression of biological data involves choosing a model to fit the data. Initial estimates of the model's parameters must be provided. Regression then optimizes the model fit by iteratively improving these parameter estimates. 
+    This package simplifies nonlinear regression in R by providing several functions with pre-specified model formulas and intuitive parameter value input syntax. 
+    These functions focus on common hyperbolic (dose-response, binding) and exponential (growth, decay) phenomena observed in biological systems. 
+    Companion functions include those for simulating responses, with a focus on plot visualizations.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -15,4 +16,5 @@ RoxygenNote: 7.0.2
 Imports: 
     ggplot2,
     stats,
-    dplyr
+    dplyr,
+    minpack.lm
