--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Version: 0.1.0
 Author: TJ Murphy <medtjm@emory.edu>
 Maintainer: TJ Murphy <medtjm@emory.edu>
 Description: 
-    Nonlinear regression of biological data involves choosing a model to fit the data. Initial estimates of the model's parameters must be provided. Regression then optimizes the model fit by iteratively improving these parameter estimates. 
-    This package simplifies nonlinear regression in R by providing several functions with pre-specified model formulas and intuitive parameter value input syntax. 
+    This package simplifies nonlinear regression in R by providing several functions with pre-specified nonlinear model formulas. The fitting input parameter syntax is intuitive. 
     These functions focus on common hyperbolic (dose-response, binding) and exponential (growth, decay) phenomena observed in biological systems. 
     Companion functions include those for simulating responses, with a focus on plot visualizations.
 License: MIT + file LICENSE
