--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,7 @@ Description:
     This package simplifies nonlinear regression in R by providing several functions with pre-specified nonlinear model formulas. The fitting input parameter syntax is intuitive. 
     These functions focus on common hyperbolic (dose-response, binding) and exponential (growth, decay) phenomena observed in biological systems. 
     Companion functions include those for simulating responses, with a focus on plot visualizations.
+Depends: R (>= 2.10)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
