--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: TJ Murphy <medtjm@emory.edu>, Jessica Hoffman<foo@gmail.com, Austin Nuckols<bar@gmail.com>
 Maintainer: TJ Murphy <medtjm@emory.edu>
 Description: 
-    This package simplifies nonlinear regression in R by providing several functions with pre-specified nonlinear model formulas. The fitting input parameter syntax is intuitive. 
+    This package simplifies nonlinear regression of biological data in R by providing several functions with pre-specified nonlinear model formulas. The fitting input parameter syntax is intuitive. 
     These functions focus on common hyperbolic (dose-response, binding) and exponential (growth, decay) phenomena observed in biological systems. 
     Companion functions include those for simulating responses, with a focus on plot visualizations.
 Depends: R (>= 2.10)
