--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,13 @@
 
 export(fitdecay1)
 export(fitdecay2)
+export(fitegro)
 export(fitlindr)
 export(fitlogdr)
 export(sim1sbind)
 export(simdecay1)
 export(simdecay2)
+export(simegro)
 export(simhetdr)
 export(simlindr)
 export(simlogdr)
