fixes formulas, adds simhetdecays

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(simdecay1)
 export(simdecay2)
 export(simegro)
 export(simggro)
+export(simhetdecay1)
+export(simhetdecay2)
 export(simhetdr)
 export(simhetegro)
 export(simlindr)
